Integration 2 other projects
- Integration Jadida
- Integration Rabat eclairage
- Photos, files, little style fixes

--- a/website/assets/css/style.css
+++ b/website/assets/css/style.css
@@ -1742,6 +1742,7 @@ aside .arma-stats {
     margin: 0;
 	backdrop-filter: blur(2px);
 	-webkit-backdrop-filter: blur(2px);
+    text-align: center;
 }
 
 .blog-title b {
