--- a/website/assets/css/style.css
+++ b/website/assets/css/style.css
@@ -1294,7 +1294,7 @@ Footer
 	height: 100vh;
 }
 
-.home #page-wrapper {
+.one-pager #page-wrapper {
 	width: 100%;
 	height: 100%;
 }
@@ -1763,42 +1763,41 @@ li.breadcrumb-item.active {
 	border-radius: 15px;
 	line-height: 1;
 	transition: background .5s ease;
-	opacity: 0.9;
 	backdrop-filter: blur(4px);
 	-webkit-backdrop-filter: blur(4px);
 	padding: 20px 25px;
 }
 
 .arma-stats.blue {
-	background-color: rgba(19, 9, 105, .7);
+	background-color: rgb(19, 9, 105);
 }
 
 .arma-stats.red {
-	background-color: rgba(255, 0, 0, .7);
+	background-color: rgb(255, 0, 0);
 }
 
 .arma-stats.yellow {
-	background-color: rgba(255, 177, 0, .7);
-}
-
-.arma-stats.green {
-	background-color: rgba(44, 216, 199, .7);
-}
-
-.arma-stats.blue:hover {
-	background-color: rgba(19, 9, 105, 1);
-}
-
-.arma-stats.red:hover {
-	background-color: rgba(255, 0, 0, 1);
-}
-
-.arma-stats.yellow:hover {
 	background-color: rgba(255, 177, 0, 1);
 }
 
+.arma-stats.green {
+	background-color: rgb(44, 216, 199);
+}
+
+.arma-stats.blue:hover {
+	background-color: rgba(19, 9, 105, .7);
+}
+
+.arma-stats.red:hover {
+	background-color: rgba(255, 0, 0, .7);
+}
+
+.arma-stats.yellow:hover {
+	background-color: rgba(255, 177, 0, .7);
+}
+
 .arma-stats.green:hover {
-	background-color: rgba(44, 216, 199, 1);
+	background-color: rgba(44, 216, 199, .7);
 }
 
 .arma-stats.large {
@@ -1859,27 +1858,31 @@ li.breadcrumb-item.active {
 }
 
 .ml-20 {
-    margin-left: 20px;
+    margin-left: 20px !important;
 }
 
 .mb-100 {	
-	margin-bottom: 100px;
+	margin-bottom: 100px !important;
 }
 
 .mb-50 {	
-	margin-bottom: 50px;
+	margin-bottom: 50px !important;
 }
 
 .pb-20 {
-    padding-bottom: 20px;
+    padding-bottom: 20px !important;
 }
 
 .pb-40 {
-    padding-bottom: 40px;
+    padding-bottom: 40px !important;
 }
 
 .pb-80 {
-    padding-bottom: 80px;
+    padding-bottom: 80px !important;
+}
+
+.negative-mr {
+	margin-top: -40px !important;
 }
 
 .page-banner.big {
@@ -1888,10 +1891,6 @@ li.breadcrumb-item.active {
 
 aside .arma-stats {
 	margin-bottom: 20px;
-}
-
-.negative-mr {
-	margin-top: -40px;
 }
 
 .blog-title {
@@ -1947,21 +1946,16 @@ aside .arma-stats {
 }
 
 /* Sections */
-.full {
-    min-height: 100vh;
-}
-
 .bg-blue {
     background-color: #120938;
 }
 
 .section {
+	width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-.section:not(.full) {
+    min-height: 100vh;
 	padding: 80px 0;
 }
 
@@ -1971,8 +1965,8 @@ aside .arma-stats {
 
 .section.has-bg {
     background-repeat: no-repeat;
-	background-size: cover;
-	padding: 80px 0;
+    background-position: bottom;
+    background-size: cover;
     align-items: flex-start;
 }
 
@@ -1983,9 +1977,14 @@ aside .arma-stats {
 	text-transform: uppercase;
 }
 
-.section.white-text .section-title,
-.section.white-text p {
+.section.white-text .section-title, 
+.section.white-text p, 
+.section.white-text .read-more {
 	color: rgba(255 , 255, 255, .5);
+}
+
+.section.white-text .read-more:hover {
+	color: rgba(255 , 255, 255, 1);
 }
 
 .section-subtitle {
@@ -1994,14 +1993,14 @@ aside .arma-stats {
 }
 
 .section.has-bg .section-subtitle {
-	font-size: 2.5rem;
-	line-height: 58px;
+	font-size: 2.375rem;
+	line-height: 50px;
 	font-weight: 300;
 }
 
 .logos-list {
     display: flex;
-    align-items: center;
+    align-items: baseline;
     justify-content: space-around;
 }
 
@@ -2013,10 +2012,59 @@ aside .arma-stats {
     opacity: .8;
 }
 
+.image-text img {
+    width: 240px;
+    margin-bottom: 20px;
+}
+
+.image-text {
+    max-width: 240px;
+    text-align: left;
+    padding-bottom: 20px;
+    border-bottom: 6px solid;
+}
+
+.section .image-text p {
+    font-size: 15px;
+    font-size: 15px;
+    line-height: 1.6;
+}
+
+.image-text.purble {
+    border-color: #221061;
+}
+
+.image-text.orange {
+    border-color: #E77A2B;
+}
+
+.image-text.blue {
+    border-color: #00A4DB;
+}
+
+.image-text.green {
+    border-color: #C5D92F;
+}
+
 .section p {
     font-size: 1rem;
     line-height: 28px;
     color: rgba(0, 0, 0, .5);
+    max-width: 800px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.section p.small {
+	font-size: 15px;
+    line-height: 1.6;
+}
+
+
+.section .content-bloc p {
+	color: #2b2b2b;
+    margin: 0;
+    max-width: 100%;
 }
 
 .icons-list {
@@ -2099,7 +2147,7 @@ aside .arma-stats {
 }
 
 .read-more {
-    font-size: 18px;
+    font-size: 16px;
     font-weight: bold;
     color: #120938;
     text-decoration: none;
@@ -2220,6 +2268,38 @@ footer {
     margin: 0 15px;
 }
 
+.img-container {
+	background-size: contain;
+}
+
+.img-container img {
+	opacity: 0;
+	visibility: hidden;
+}
+
+.values {
+    display: flex;
+    align-items: baseline;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    gap: 30px;
+}
+
+.value {
+	width: 230px;
+	flex: 0 0 230px;
+	max-width: 230px;
+	gap: 30px;
+}
+
+.value-toggle {
+	margin-bottom: 20px;
+	display: block;
+}
+
+.title-text h4 {
+	font-size: 1rem;
+}
 
 /*Animate css transition delay*/
 .wow__delay-1 {
@@ -2258,8 +2338,8 @@ Media Queries
 }
 
 @media (min-width: 1200px) {
-	.section .container {
-		max-width: 1070px;
+	.extra-padding {
+		padding-bottom: 400px;
 	}
 }
 
