--- a/website/assets/css/style.css
+++ b/website/assets/css/style.css
@@ -2277,17 +2277,15 @@ footer {
 
 .values {
     display: flex;
-    align-items: baseline;
+    align-items: initial;
     justify-content: space-around;
     flex-wrap: wrap;
-    gap: 30px;
 }
 
 .value {
 	width: 230px;
 	flex: 0 0 230px;
 	max-width: 230px;
-	gap: 30px;
 }
 
 .value-toggle {
