--- a/website/assets/css/style.css
+++ b/website/assets/css/style.css
@@ -694,6 +694,14 @@ General
 .bg-blue {
 	background-color: #1F1353;
 }
+
+.bg-orange {
+	background-color: #F4971C;
+}
+
+.bg-grey {
+	background-color: #706E6F;
+}
 /* ===================================
     map sec
     ====================================== */
@@ -2292,6 +2300,11 @@ footer {
     color: #fff;
 }
 
+#arma-prestations .slick-dots li button:before,
+#arma-prestations .slick-dots li.slick-active button:before {
+	color: #000;
+}
+
 .slick-dots {
     bottom: -40px;
 }
@@ -2390,6 +2403,27 @@ footer {
 
 .text-shadow {
     text-shadow: 1px 2px 2px rgba(0, 0, 0, 0.16);
+}
+
+.arma-suivi .no-gutters {
+    margin-left: -10px;
+    margin-right: -10px;
+}
+
+.arma-suivi .no-gutters>.col,
+.arma-suivi .no-gutters>[class*=col-] {
+	padding-right: 10px;
+	padding-left: 10px;
+}
+
+.arma-suivi .img-holder {
+    margin-bottom: 20px;
+}
+
+.text-bloc {
+    padding: 10px 20px;
+    margin-bottom: 20px;
+    min-height: 192px;
 }
 
 /*Animate css transition delay*/
